
AntPublisher:
----------------------
* No longer extends AntBuilder, but delegates to an AntBuilder instance. AntPublisher previously could have been used as a builder and a publisher, but this wasn't semantically correct. It also made it more difficult to look at the class signature and understand its responsibilities. Patch by Kent Spillner.

main/build.xml:
----------------------
* Allow build for jdk 1.3 no matter which jdk is being used. Patch by Brad Clarke. 

ClearCase:
----------------------
* New 'all' attribute can be used to increase performance when checking the entire view. Patch by Rick Reimer.
* New plugins for ClearCase support (CC-326). Submitted by Kevin Lee
  - UCM: sourcecontrol that monitors and reports in terms of UCM activities
  - ClearCaseViewstrapper: bootstrapper for use with dynamic views
  - FormattedLabelIncrementer: label incrementer that creates labels suitable for baselining
  - ClearCaseAuditLogger: adds information from an audited build into the CC build log

configxml.html:
----------------------
* Included link to timebuild in modificationset documentation.

config.xml:
----------------------
* Allow preconfiguration of <log ..> element and sub-elements. Patch by Jerome Lacoste.
* Allow preconfiguration of project and subelements (CC-352). Patch by Jerome Lacoste.

ConcurrentVersionsSystem.java:
----------------------
* Fixed bug when module attribute is set to a true CVS module, not just a directory. Patch by Brad Clarke.

CurrentBuildStatusPageListner:
----------------------
* Added new listener that will take an input template and do variable substitution to create an output page. Submitted by John Lussmyer

CVS.java:
----------------------
* Deprecated CVS.java in favor of ConcurrentVersionsSystem.java to overcome issues with directory/filename conflicts, specifically with Eclipse IDE (CC-164). Note: CVS.java and other deprecated methods/classes are scheduled for deletion in the 3.0 release.

general:
----------------------